--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    ext.kotlin_version = '1.3.31'
     ext{
         kotlin_version = '1.3.31'
         okhttp_version = '3.10.0'
