--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
         glide_version = '4.9.0'
         retrofit_version = '2.2.0'
         room_version = '2.0.0'
+        paging_version = '2.1.0'
         lifecycle_version = '2.0.0'
         dagger_version = '2.16'
     }
