--- a/MusicPlayer/build.gradle
+++ b/MusicPlayer/build.gradle
@@ -1,4 +1,5 @@
 apply from: '../module_build_scripts.gradle'
+apply plugin: "androidx.navigation.safeargs"
 
 repositories {
     maven { url "https://dl.bintray.com/summerly/maven" }
@@ -17,49 +18,22 @@ dependencies {
     implementation 'me.drakeet.multitype:multitype:3.5.0'
     implementation 'me.drakeet.multitype:multitype-ktx:3.5.0'
 
-    implementation 'androidx.core:core-ktx:1.0.1'
     implementation 'com.google.code.gson:gson:2.8.5'
-
-    implementation 'com.github.bumptech.glide:glide:4.8.0'
-    kapt 'com.github.bumptech.glide:compiler:4.8.0'
-    implementation 'jp.wasabeef:glide-transformations:3.3.0'
 
     //mp3
     implementation 'com.mpatric:mp3agic:0.9.0'
 
-    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
-    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
-
-    implementation 'org.greenrobot:eventbus:3.1.1'
-
-    def lifecycle_version = "2.0.0"
-    def room_version = "2.0.0"
+    api 'jp.wasabeef:glide-transformations:4.0.1'
+    api 'com.github.bumptech.glide:glide:4.9.0'
+    kapt 'com.github.bumptech.glide:compiler:4.9.0'
 
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-
-    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutine_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutine_version"
-
-    //aac
-    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
-    implementation "androidx.room:room-runtime:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
 
 
     implementation "androidx.palette:palette:1.0.0"
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation "androidx.palette:palette-ktx:1.0.0"
     implementation "androidx.media:media:1.0.0"
-    implementation 'androidx.drawerlayout:drawerlayout:1.0.0'
-    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.0.0'
-
-
-
-    implementation 'com.google.android.material:material:1.0.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.constraintlayout:constraintlayout-solver:1.1.3'
 
     //test
     testImplementation 'junit:junit:4.12'
@@ -76,8 +50,7 @@ dependencies {
     androidTestImplementation 'net.bytebuddy:byte-buddy-android:1.8.22'
     androidTestImplementation 'net.bytebuddy:byte-buddy-agent:1.8.22'
 
-    androidTestImplementation "androidx.room:room-testing:$room_version"
-    androidTestImplementation "androidx.arch.core:core-testing:$lifecycle_version"
+
     androidTestImplementation 'androidx.test:runner:1.1.0'
     androidTestImplementation 'androidx.test:rules:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
