--- a/module_build_scripts.gradle
+++ b/module_build_scripts.gradle
@@ -7,7 +7,6 @@ if (isIndependentApk.toBoolean()) {
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
-apply plugin: "androidx.navigation.safeargs"
 apply plugin: 'kotlin-allopen'
 
 
@@ -55,6 +54,16 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    packagingOptions {
+        pickFirst 'META-INF/*'
+    }
+
+}
+
+dependencies {
+    implementation project(':library')
+    kapt 'com.alibaba:arouter-compiler:1.1.4'
 }
 
 
