--- a/build.gradle
+++ b/build.gradle
@@ -24,8 +24,10 @@ allprojects {
         google()
         jcenter()
         maven { url "https://kotlin.bintray.com/kotlinx" }
+        maven { url "https://dl.bintray.com/summerly/maven" }
     }
 }
+
 
 task clean(type: Delete) {
     delete rootProject.buildDir
