--- a/MusicPlayer/src/main/AndroidManifest.xml
+++ b/MusicPlayer/src/main/AndroidManifest.xml
@@ -11,26 +11,26 @@
         android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
+        android:theme="@style/MusicPlayerAppTheme"
         tools:ignore="GoogleAppIndexingWarning"
         tools:targetApi="n">
 
 
         <activity
             android:name=".ui.activity.main.AppMainActivity"
-            android:theme="@style/AppTheme.ColoredNavigationBar" />
+            android:theme="@style/MusicPlayerAppTheme.AppBarOverlay" />
 
         <activity
             android:name=".ui.activity.local.LocalMusicActivity"
-            android:theme="@style/AppTheme.ColoredNavigationBar" />
+            android:theme="@style/MusicPlayerAppTheme.ColoredNavigationBar" />
 
         <activity
             android:name=".ui.activity.local.LocalMusicListActivity"
-            android:theme="@style/AppTheme.ColoredNavigationBar" />
+            android:theme="@style/MusicPlayerAppTheme.ColoredNavigationBar" />
 
         <activity
             android:name=".ui.activity.local.LocalScannerActivity"
-            android:theme="@style/AppTheme.ColoredNavigationBar" />
+            android:theme="@style/MusicPlayerAppTheme.ColoredNavigationBar" />
 
         <activity
             android:name=".ui.activity.MusicPlayerActivity"
@@ -40,19 +40,19 @@
 
         <activity
             android:name=".ui.activity.cloud.CloudPlayListDetailActivity"
-            android:theme="@style/AppTheme.ColoredNavigationBar" />
+            android:theme="@style/MusicPlayerAppTheme.ColoredNavigationBar" />
 
         <activity
             android:name=".ui.activity.cloud.CloudDailyRecommendActivity"
-            android:theme="@style/AppTheme.ColoredNavigationBar" />
+            android:theme="@style/MusicPlayerAppTheme.ColoredNavigationBar" />
 
         <activity
             android:name=".ui.activity.cloud.TopDetailActivity"
-            android:theme="@style/AppTheme.ColoredNavigationBar" />
+            android:theme="@style/MusicPlayerAppTheme.ColoredNavigationBar" />
 
         <activity
             android:name=".ui.activity.LatestPlayListActivity"
-            android:theme="@style/AppTheme.ColoredNavigationBar" />
+            android:theme="@style/MusicPlayerAppTheme.ColoredNavigationBar" />
 
         <service android:name=".ui.service.QuietPlayerService" />
 
