--- a/build.gradle
+++ b/build.gradle
@@ -6,8 +6,10 @@ buildscript {
     ext.coroutine_version = '1.0.0'
 
     repositories {
+        maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
         google()
-        jcenter()
+        jcenter(){ url 'http://jcenter.bintray.com/'}
+        maven { url 'https://jitpack.io' }
         
     }
     dependencies {
@@ -22,8 +24,10 @@ buildscript {
 
 allprojects {
     repositories {
+        maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
         google()
-        jcenter()
+        jcenter(){ url 'http://jcenter.bintray.com/'}
+        maven { url 'https://jitpack.io' }
         maven { url "https://kotlin.bintray.com/kotlinx" }
         maven { url "https://dl.bintray.com/summerly/maven" }
     }
